--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.food_delivery_app">
    <application
-        android:label="food_app"
+        android:label="Shop_App"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
